XWIKI-10701: Issue with text label alignment in User Profile

--- a/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/src/main/resources/flamingo/less/misc.less
+++ b/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/src/main/resources/flamingo/less/misc.less
@@ -134,7 +134,7 @@ table {
   display: inherit;
   font-size: inherit;
   padding: inherit;
-  text-align: inherit;
+  text-align: left;
 }
 
 // FIX: Blog Post footer
